WebConsole: add demo setup functionality
Fix typo in API type defs

Generate TypeScript OpenAPI bindings v8.0.0
